--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,9 @@ dist
 # TernJS port file
 .tern-port
 
+# VS Code files
+.vscode/
+
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
