--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     },
     "dependencies": {
         "@discordjs/rest": "2.4.0",
+        "@prisma/client": "^6.2.1",
+        "bcrypt": "^5.1.1",
         "class-transformer": "0.5.1",
         "class-validator": "0.14.1",
         "cron-parser": "^4.9.0",
@@ -66,6 +68,7 @@
         "eslint-plugin-import": "^2.30.0",
         "eslint-plugin-unicorn": "^55.0.0",
         "prettier": "^3.3.3",
+        "prisma": "^6.2.1",
         "typescript": "^5.6.2"
     }
 }
